--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body>
-  <h1>SCRS Scorpion</h1>
+  <h1>SCRS-v4</h1>
   <div class="grid">
     <div class="card" id="water-temp">Water Temp<br><strong>-- °F</strong></div>
     <div class="card" id="wind-forecast">Wind Forecast<br><strong>-- kts</strong><br>--°</div>
