--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
   </div>
   <small id="timestamp">Last updated: --</small>
 
+  <button id="refreshBtn">Refresh Data</button>
+  
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     async function loadData() {
